# Sentiment-Analysis

./: .gitignore  config.yaml  main.py  makefile  pyproject.toml
data/: data_loading.py
models/: training.py
preprocessing/: preprocessing.py
utils/: utils.py
